examples/test/testpolicy6648.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6648
  namespace: namespace466
spec:
  podSelector:
    matchLabels:
      key20: value24
      key29: value12
      key10: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value8
          key42: value48
      podSelector:
        matchLabels:
          key34: value6
          key29: value43
          key6: value38
